--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 pagination.n_items_per_pages=25
 
-spring.profiles.active=prod
+# spring.profiles.active=prod
 
-spring.datasource.url=jdbc:mariadb://localhost:3307/spring_test
+spring.datasource.url=jdbc:mariadb://localhost:3307/spring_test?autoreconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=homestead
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
